# tiny-dnn

./: .clang-format  .gitignore  .gitmodules  .lock-waf_win32_build  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  LeNet-model  Makefile  README.md  README.md~  appveyor.yml  build_env.sh  cmake-uninstall.cmake  cmake_install.cmake  dev-env.sh  dev_env.sh  install_manifest.txt  quantized.cpp  test.sh  tinydnn-config-version.cmake  tinydnn-config.cmake  tinydnn-targets.cmake  train.cpp  train_error.cpp  travis_script.sh  waf  wscript
.travis/: clang-format.sh  cpplint_test.sh  install-protobuf.sh  install.sh
benchmarks/: CMakeLists.txt  benchmarks.cpp  bm_fully_connected.h  bm_global_avepool.h
cereal/: access.hpp  cereal.hpp
cereal/archives/: adapters.hpp  binary.hpp  json.hpp  portable_binary.hpp  xml.hpp
cereal/details/: helpers.hpp  polymorphic_impl.hpp  traits.hpp
cmake/: clang-cxx-dev-tools.cmake  protoc.cmake  summary.cmake
cmake/DownloadProject/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  example.cpp
doc/: Adding a new layer.md  Adding-a-new-layer.md  CONTRIBUTING.md  Changing-from-v0_0_1.md  DeviceAbstraction.puml  Doxyfile.in  How-Tos.md  Integrate-with-your-application.md  Train-network-with-your-dataset.md  device-abstraction-uml.md  device-abstraction-uml.puml  readme.md
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  autodoc.py  conf.py  index.rst  make.bat  readme.md
example/: build.bat  main.cpp  sample_train.cpp  test  test.cpp  train  train.cpp  wscript
examples/: CMakeLists.txt  main.cpp  warn.txt  wscript
examples/Android/: Makefile  Makefile~  README.md  cnn_predict.d  exe_predict  main.cpp~  source_include.h  source_include.h~  test.cpp  test.cpp~
examples/Android/jni/: Android.mk  Android.mk~  Application.mk  cnnInterface.cpp  cnnInterface.cpp_1  cnnInterface.h  cnnInterface.h~  common.cpp  common.cpp~  common.h
examples/backends/cblas/: test_mlp.cpp
examples/benchmarks/: main.cpp
examples/caffe_convert_model/: CMakeLists.txt  readme.md
examples/caffe_converter/: CMakeLists.txt  caffe_convert_model.cpp  caffe_converter.cpp  readme.md
examples/char_rnn/: README.md  char_rnn.cpp  test_char_rnn.cpp
examples/char_rnn/data/: encoding.raw
examples/char_rnn/python/: gitter_server.py  prepare_dataset.py  setup.sh
examples/char_rnn/python/tiny_dnn/: setup.py  tiny_char_rnn.h  tiny_char_rnn.i
examples/char_rnn/python/utils/: dataset.py  encoder.py  gitter.py  preprocessor.py
examples/cifar10/: cifar-weights  readme.md  test.cpp  train.cpp
examples/deconv/: readme.md  train.cpp  visual.cpp  visual.cpp~
examples/imagenet/: classes.txt  readme.md  test.cpp
examples/ios/: readme.md
examples/mnist/: .quantized.cpp.swn  .quantized.cpp.swo  Instructions.md  Makefile  how_to_build.md  quantized.cpp  readme.md  t10k-images.idx3-ubyte  t10k-labels.idx1-ubyte  test.cpp  test_with_stb_image.cpp  train-images.idx3-ubyte  train-labels.idx1-ubyte  train.cpp  train_quantized.cpp
examples/mnist/stb_image/: stb_image_resize.h
examples/recurrent_addition/: README.md  addition.cpp
examples/sinus_fit/: sinus_fit.cpp
examples/ssd_detection/: README.md  convert_models.py  test.cpp
examples/tensorflow_converter/: CMakeLists.txt  alexnet_benchmark.py  example_net_loader.cpp  example_tensorflow_parser.cpp  graph_impl.h  main.cpp  node_factory.h  node_factory_impl.h  protoc.sh  squeezenet_benchmark.py  tensorflow_parser.cpp
fmath/: Makefile  avx2.cpp  bench.cpp  bench.sln  bench.vcproj  ck.cpp  fastexp.cpp  fmath.hpp  readme.md  readme.txt
googletest-build/: Makefile
include/: activation.h  activation_function.h  average_pooling_layer.h  cnn.h  config.h  convolutional_layer.h  deform.h  dropout.h  fixed_point.h  fully_connected_dropout_layer.h  fully_connected_layer.h  image.h  layer.h  learner.h  loss_function.h  max_pooling_layer.h  mnist_parser.h  network.h  optimizer.h  partial_connected_layer.h  picotest.h  pooling_layer.h  product.h  tiny_cnn.h  updater.h  util.h
scripts/: clang-format.sh  cpplint_test.sh  lints.sh  run_lints.sh  update-authors.sh
src/: main.cpp  test.cpp  wscript
test/: 1892-7954-3123-3411  3874-2779-3198-6502  8602-4865-0900-6138  CMakeLists.txt  Makefile  device.cpp  picotest.h  print_device.cpp  test.cpp  test_activation_layer.h  test_average_pooling_layer.h  test_average_unpooling_layer.h  test_batch_norm_layer.h  test_caffe_converter.h  test_concat_layer.h  test_convolutional_layer.h  test_core.h  test_deconvolutional_layer.h  test_dropout_layer.h  test_fully_connected_layer.h  test_global_average_pooling_layer.h  test_gru_cell.h  test_image.h  test_integration.h  test_l2_norm_layer.h  test_large_thread_count.h  test_lrn_layer.h  test_lstm_cell.h  test_main.cpp  test_max_pooling_layer.h  test_models.h  test_network.h  test_nms.h  test_no_duplicate_symbols.cpp  test_node.h  test_nodes.h  test_optimizers.h  test_pad_layer.h  test_parameter.h  test_power_layer.h  (+16 more)
test/src/: test_all.cpp  test_average_pooling_layer.cpp  test_convolutional_layer.cpp  test_dropout_layer.cpp  test_fully_connected_layer.cpp  test_large_thread_count.cpp  test_lrn_layer.cpp  test_max_pooling_layer.cpp  test_network.cpp  test_nodes.cpp  test_target_cost.cpp
test/testdata/: xor.h5
tiny_cnn/: activation_function.h  average_pooling_layer.h  cifar10_parser.h  config.h  convolutional_layer.h  data_storage.h  display.h  dropout.h  dropout_layer.h  fully_connected_dropout_layer.h  fully_connected_layer.h  ghh_activation_dropout_layer.h  ghh_activation_layer.h  image.h  input_layer.h  layer.h  layers.h  linear_layer.h  max_pooling_layer.h  mnist_parser.h  network.h  node.h  nodes.h  optimizer.h  partial_connected_layer.h  tiny_cnn.h  util.h  weight_init.h
tiny_dnn/: .tiny_dnn.h.swo  config.h  network.h  node.h  nodes.h  parameter.h  tiny_dnn.h
vc/: LeNet-weights  cnn.sln  cnn.vcxproj  cnn.vcxproj.filters  test.vcxproj  test.vcxproj.filters  tiny_cnn.sln  tiny_cnn.vcxproj  tiny_cnn_2015.sln  tiny_cnn_2015.vcxproj  tiny_cnn_test.vcxproj  tiny_cnn_test_2015.vcxproj
(+495 files in other folders)
